Combined with bill_section
Co-Authored-By: zormpalas <118913235+zormpalas@users.noreply.github.com>

--- a/code/app/src/main/res/values/styles.xml
+++ b/code/app/src/main/res/values/styles.xml
@@ -33,5 +33,9 @@
 
     <style name="spinnerDropDownItemStyle" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
     </style>
+
+    <style name="BottomNavigationTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:textSize">22sp</item> <!-- Adjust the text size as per your preference -->
+    </style>
 </resources>
 
