--- a/code/app/src/main/res/layout/activity_buy_ticket.xml
+++ b/code/app/src/main/res/layout/activity_buy_ticket.xml
@@ -11,6 +11,8 @@
     tools:context=".ui.BuyBusTickets">
 
 
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/feedWhite"
         android:layout_width="match_parent"
@@ -24,6 +26,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -289,7 +299,9 @@
                         app:layout_constraintTop_toBottomOf="@+id/single_use"
                         app:layout_constraintVertical_bias="0.724" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.cardview.widget.CardView>
+
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView2"
@@ -342,7 +354,7 @@
                         android:layout_height="wrap_content"
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/buy_day"
+                        app:layout_constraintEnd_toStartOf="@+id/buy_month"
                         app:layout_constraintHorizontal_bias="0.47"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -352,7 +364,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.cardview.widget.CardView>
 
     <ImageView
@@ -375,6 +387,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_notifications_black_24dp" />
+
 
     <ImageView
         android:id="@+id/ivProfile"
